# cmake_template

./: CMakeLists.txt
exe_proj/: CMakeLists.txt
exe_proj/src/: main.cpp
lib_proj/: CMakeLists.txt
lib_proj/include/: public_module.h
lib_proj/src/: private_module.cpp  private_module.h  public_module.cpp
